--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Ойн баярын бэлэг</title>
+  <title>Хөөрхөншд</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -44,12 +44,12 @@
   </div>
 
   <!-- Bruno Mars – Just The Way You Are -->
-  <section class="final-video">
-    <h2>💖 Just The Way You Are – Bruno Mars 💖</h2>
-    <video controls width="100%">
-      <source src="bruno.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
-  </section>
+  <div class="video-section">
+  <iframe 
+    src="https://drive.google.com/file/d/15ZL6h5ymX-skhzV_8OoIR6z7uw1CzHOZ/preview" 
+    width="100%" height="480" allow="autoplay">
+  </iframe>
+</div>
+
 </body>
 </html>
